--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 		</div>
 		<nav class="main-menu">
 			<ul>
-				<li><a href="index.html" class="active">Home</a></li>
-				<li><a href="about.html">About</a></li>
+				<li><a href="index.html"</li>
+				<li><a href="about.html"class="active">About</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
