--- a/gallery.html
+++ b/gallery.html
@@ -82,115 +82,14 @@
 			<h4>Gallery</h4>
 			<ul class="gallery-filter">
 				<li class="filter all active" data-filter="*">All</li>
-				<li class="filter" data-filter=".featured">Featured</li>
-				<li class="filter" data-filter=".people">People</li>
-				<li class="filter" data-filter=".nature">Nature</li>
-				<li class="filter" data-filter=".animal">Animal</li>
-				<li class="filter" data-filter=".travel">Travel</li>
+				
 			</ul>
 		</div>
 		<div class="nice-scroll">
 			<div class="gallery-warp">
 				<div class="grid-sizer"></div>
-				<div class="gallery-item gi-big featured">
-					<a class="fresco" href="img/gallery/1.jpg" data-fresco-group="projects">
-						<img src="img/gallery/1.jpg" alt="">
-					</a>
-					<div class="gi-hover">
-						<img src="img/gallery/author.jpg" alt="">
-						<h6>Arthur Rose</h6>
-					</div>
-				</div>
-				<div class="gallery-item people">
-					<a class="fresco" href="img/gallery/2.jpg" data-fresco-group="projects">
-						<img src="img/gallery/2.jpg" alt="">
-					</a>
-					<div class="gi-hover">
-						<img src="img/gallery/author.jpg" alt="">
-						<h6>Arthur Rose</h6>
-					</div>
-				</div>
-				<div class="gallery-item nature">
-					<a class="fresco" href="img/gallery/3.jpg" data-fresco-group="projects">
-						<img src="img/gallery/3.jpg" alt="">
-					</a>
-					<div class="gi-hover">
-						<img src="img/gallery/author.jpg" alt="">
-						<h6>Arthur Rose</h6>
-					</div>
-				</div>
-				<div class="gallery-item gi-long travel">
-					<a class="fresco" href="img/gallery/4.jpg" data-fresco-group="projects">
-						<img src="img/gallery/4.jpg" alt="">
-					</a>
-					<div class="gi-hover">
-						<img src="img/gallery/author.jpg" alt="">
-						<h6>Arthur Rose</h6>
-					</div>
-				</div>
-				<div class="gallery-item gi-big animal">
-					<a class="fresco" href="img/gallery/6.jpg" data-fresco-group="projects">
-						<img src="img/gallery/6.jpg" alt="">
-					</a>
-					<div class="gi-hover">
-						<img src="img/gallery/author.jpg" alt="">
-						<h6>Arthur Rose</h6>
-					</div>
-				</div>
-				<div class="gallery-item gi-big featured">
-					<a class="fresco" href="img/gallery/5.jpg" data-fresco-group="projects">
-						<img src="img/gallery/5.jpg" alt="">
-					</a>
-					<div class="gi-hover">
-						<img src="img/gallery/author.jpg" alt="">
-						<h6>Arthur Rose</h6>
-					</div>
-				</div>
-				<div class="gallery-item travel">
-					<a class="fresco" href="img/gallery/7.jpg" data-fresco-group="projects">
-						<img src="img/gallery/7.jpg" alt="">
-					</a>
-					<div class="gi-hover">
-						<img src="img/gallery/author.jpg" alt="">
-						<h6>Arthur Rose</h6>
-					</div>
-				</div>
-				<div class="gallery-item people">
-					<a class="fresco" href="img/gallery/8.jpg" data-fresco-group="projects">
-						<img src="img/gallery/8.jpg" alt="">
-					</a>
-					<div class="gi-hover">
-						<img src="img/gallery/author.jpg" alt="">
-						<h6>Arthur Rose</h6>
-					</div>
-				</div>
-				<div class="gallery-item animal">
-					<a class="fresco" href="img/gallery/9.jpg" data-fresco-group="projects">
-						<img src="img/gallery/9.jpg" alt="">
-					</a>
-					<div class="gi-hover">
-						<img src="img/gallery/author.jpg" alt="">
-						<h6>Arthur Rose</h6>
-					</div>
-				</div>
-				<div class="gallery-item gi-big travel">
-					<a class="fresco" href="img/gallery/10.jpg" data-fresco-group="projects">
-						<img src="img/gallery/10.jpg" alt="">
-					</a>
-					<div class="gi-hover">
-						<img src="img/gallery/author.jpg" alt="">
-						<h6>Arthur Rose</h6>
-					</div>
-				</div>
-				<div class="gallery-item featured">
-					<a class="fresco" href="img/gallery/11.jpg" data-fresco-group="projects">
-						<img src="img/gallery/11.jpg" alt="">
-					</a>
-					<div class="gi-hover">
-						<img src="img/gallery/author.jpg" alt="">
-						<h6>Arthur Rose</h6>
-					</div>
-				</div>
+				
+				<div class='embedsocial-instagram' data-ref="63c470a204c078230b6468c13a957ad68633f2d4"></div>
 			</div>
 		</div>
 	</section>
@@ -198,6 +97,8 @@
 
 	<!--====== Javascripts & Jquery ======-->
 	<script src="js/vendor/jquery-3.2.1.min.js"></script>
+	<script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/in.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialInstagramScript"));</script>
+
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
