--- a/gallery.html
+++ b/gallery.html
@@ -76,7 +76,20 @@
 	</div>
 	<!-- Offcanvas Menu Section end -->
 
-
+	<!-- Gallery Section end -->
+	<section class="gallery-section">
+		<div class="gallery-header">
+			<h4>Photography</h4>
+		</div>
+		<div class="nice-scroll">
+			<div class="gallery-warp">
+				<div class="grid-sizer"></div>
+				
+				<div class='embedsocial-instagram' data-ref="63c470a204c078230b6468c13a957ad68633f2d4"></div>
+			</div>
+		</div>
+	</section>
+	<!-- Gallery Section end -->
 
 	<!--====== Javascripts & Jquery ======-->
 	<script src="js/vendor/jquery-3.2.1.min.js"></script>
