--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
 				<a href="#"><i class="ti-linkedin"></i></a>
 				<a href="#"><i class="ti-instagram"></i></a>
 			</div>
-			<!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/68c03c06b9035b009e5d805b8ab44a24.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+			<!-- LightWidget WIDGET -->
 	</div>
 	<!-- Offcanvas Menu Section end -->
 
@@ -82,7 +82,8 @@
 			<div class="gallery-warp">
 				<div class="grid-sizer"></div>
 				
-				<div class='embedsocial-instagram' data-ref="63c470a204c078230b6468c13a957ad68633f2d4"></div>
+				<script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+				<iframe src="//lightwidget.com/widgets/68c03c06b9035b009e5d805b8ab44a24.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
 			</div>
 		</div>
 	</section>
