--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@
 		<div class="nice-scroll">
 			<div class="gallery-warp">
 				<div class="grid-sizer"></div>
-				<div id="curator-feed-default-feed-layout"></div>
+				<div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag"></a></div>
 			</div>
 		</div>
 	</section>
