--- a/gallery.html
+++ b/gallery.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="zxx">
+
 <head>
 	<title>Tulen | Photography HTML Template</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Tulen Photography HTML Template"">
-	<meta name="keywords" content="photo, html">
+	<meta name=" keywords" content="photo, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/themify-icons.css"/>
-	<link rel="stylesheet" href="css/accordion.css"/>
-	<link rel="stylesheet" href="css/fresco.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.min.css"/>
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/themify-icons.css" />
+	<link rel="stylesheet" href="css/accordion.css" />
+	<link rel="stylesheet" href="css/fresco.css" />
+	<link rel="stylesheet" href="css/owl.carousel.min.css" />
 
 	<!-- Main Stylesheets -->
-	<link rel="stylesheet" href="css/style.css"/>
+	<link rel="stylesheet" href="css/style.css" />
 
 
 	<!--[if lt IE 9]>
@@ -24,6 +25,7 @@
 	<![endif]-->
 
 </head>
+
 <body>
 	<!-- Page Preloder -->
 	<div id="preloder">
@@ -69,7 +71,7 @@
 				<a href="#"><i class="ti-linkedin"></i></a>
 				<a href="#"><i class="ti-instagram"></i></a>
 			</div>
-			<!-- LightWidget WIDGET -->
+		</div>
 	</div>
 	<!-- Offcanvas Menu Section end -->
 
@@ -81,7 +83,14 @@
 		<div class="nice-scroll">
 			<div class="gallery-warp">
 				<div class="grid-sizer"></div>
-				<div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag"></a></div>
+
+
+				<link href="https://assets.juicer.io/embed.css" media="all" rel="stylesheet" type="text/css" />
+				<ul class="juicer-feed" data-feed-id="osamaahmedtahir17">
+					<h1 class="referral">
+				</ul>
+
+
 			</div>
 		</div>
 	</section>
@@ -89,14 +98,7 @@
 
 	<!--====== Javascripts & Jquery ======-->
 	<script src="js/vendor/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript">
-		/* curator-feed-default-feed-layout */
-		(function(){
-		var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
-		i.src = "https://cdn.curator.io/published/c5fdb37b-a90c-495e-9c02-2559363db940.js";
-		e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
-		})();
-		</script>
+	<script src="https://assets.juicer.io/embed.js" type="text/javascript"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
@@ -107,5 +109,6 @@
 	<script src="js/fresco.min.js"></script>
 	<script src="js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
