--- a/blog.html
+++ b/blog.html
@@ -81,8 +81,9 @@
 		<div class="nice-scroll">
 			<div class="blog-grid-warp">
 				<div class="blog-grid-sizer"></div>
+				<div class="blog-grid">
 				<div id="medium-widget"></div>
-    
+				</div>
 
 			</div>
 		</div>
