--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <!-- Skills-->
         <section class="resume-section" id="certificationandcourses">
             <div class="resume-section-content">
-                <h2 class="mb-5">Certification and Courses</h2>
+                <h2 class="mb-5">Certifications</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Quantum Computer Programming</h3>
