--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Quantum Computer Programming</h3>
+                        <h3 class="mb-0">Data Science Foundations</h3>
                         <div class="subheading mb-3">IBM</div>
                         <p style="text-align:justify">
                             This training helps the learner to have an understanding of the possibilities and
